# rs_manifest_patcher

./: Cargo.toml  LICENSE  README.md  manifest.json
.github/workflows/: build.yml  release.yml
desktop/: Project Epoch Patcher.desktop  README.md
src/: banner.rs  config.rs  format.rs  game.rs  lib.rs  main.rs  manifest.rs  progress.rs  prompt.rs  transaction.rs
tests/: test_manifest_location.rs  test_manifest_parse.rs
tests/common/: mod.rs
