[package]
name = "rs_manifest_patcher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.28"
colored = "3.0.0"
humansize = "2.1.3"
md5 = "0.7.0"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
